--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
   workflow_dispatch:
 jobs:
-
+  
   build:
 
     runs-on: ubuntu-latest
@@ -16,3 +16,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+  Test:
+    
+    steps:
+      name:
+      run: docker run --name hello-python my_image_name:$(date +%s)
