--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
   Test:
-    
+    runs-on: ubuntu-latest
     steps:
-      - name:
+      - name: my-image-name
         run: docker run --name hello-python my_image_name:$(date +%s)
