--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,9 +16,12 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-  Test:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: my-image-name:latest
-        run: docker run -itd --name hello-python -p 8080:8080 my_image_name:latest
+    - name: run & test Container  
+      run: docker run -itd --name hello-python -p 8080:8080 my_image_name:latest
+    - run: curl localhost:8080  
+#  Test:
+#    needs: build
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: my-image-name:latest
+#        run: docker run -itd --name hello-python -p 8080:8080 my_image_name:latest
