--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag my-image-name:latest
     - name: run & test Container  
       run: docker run -itd --name hello-python -p 8080:8080 my-image-name:latest
     - run: sleep 5 && curl localhost:8080 && sleep 5 
