--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,3 +8,5 @@ jobs:
       - uses: actions/checkout@v3
       - name: install requirements
         run: pip install -r requirements.txt
+      - name: run the app and test
+        run: python app.py && sleep 5 && curl localhost:8080 
