--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
      steps:
       - uses: actions/checkout@v3
       - name: install requirements
-        run: pip3 install -r requirements.txt
+        run: pip install -r requirements.txt
   #    - uses: actions/cache@v3
    #     with: #this packages (cache) for it to use in the test
     #      path: . #note that this path is not influenced
@@ -16,8 +16,8 @@ jobs:
      needs: Build
      runs-on: self-hosted
      steps:
-     - uses: actions/cache@v3
-     - name: run the app
-       run: python3 app.py &
-     - name: test   
-       run: sleep 5 && curl localhost:8080 
+         - uses: actions/cache@v3
+         - name: run the app
+           run: python3 app.py &
+         - name: test   
+           run: sleep 5 && curl localhost:8080 
